--- a/index.html
+++ b/index.html
@@ -1,51 +1,167 @@
 <html>
     <head>
         <title>Lavadora de aire</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@300;400;600&display=swap" rel="stylesheet">
     </head>
     <body>
-        <nav>
-            <h1>Lavadora de aire</h1>
-        </nav>
-        <div>
-            <h2>Control de entradas</h2>
-            <label for="air_flow">Aire [L/min]</label>
-            <input name="air_flow" id="input_air" type="number" value="0" min="0" max="30">
-            <input name="air_flow" id="range_air" type="range" value="0" min="0" max="30">
+        <div class="content">
+            <nav>
+                <h1>Lavadora de aire</h1>
+            </nav>
+            <div class="card">
+                <h2 class="title">Control de entradas</h2>
+                <div class="control-box">
+                    <div class="input">
+                        <label for="air_flow">Aire [L/min]</label>
+                        <input name="air_flow" id="input_air" type="number" value="0" min="0" max="30">
+                    </div>
+                    <input name="air_flow" class="slider" id="range_air" type="range" value="0" min="0" max="30">
+                </div>
+                <div class="control-box">
+                    <div class="input">
+                        <label for="water_flow">Agua [L/min]</label>
+                        <input name="water_flow" id="input_water" type="number" value="0" min="0" max="30">
+                    </div>
+                    <input name="water_flow" class="slider" id="range_water" type="range" value="0" min="0" max="30">
+                </div>
+                <hr />
+                <h2 class="title">Lecturas</h2>
+                <div class="table-label">
+                    <label for="air-table">Aire</label>
+                </div>
+                <table class="data-table" name="air-table" style="margin-bottom: 20px;">
+                    <tr>
+                        <th>Flujo [L/min]</th>
+                        <th>PM2.5 [µg/m3]</th>
+                        <th>PM10 [µg/m3]</th>
+                    </tr>
+                    <tr>
+                        <td id="airFlow">0</td>
+                        <td id="pm25">0</td>
+                        <td id="pm10">0</td>
+                    </tr>
+                </table>
 
-            <label for="water_flow">Agua [L/min]</label>
-            <input name="water_flow" id="input_water" type="number" value="0" min="0" max="30">
-            <input name="water_flow" id="range_water" type="range" value="0" min="0" max="30">
-            <hr />
-            <table>
-                <tr>
-                    <th>Aire</th>
-                </tr>
-                <tr>
-                    <th>Flujo [L/min]</th>
-                    <th>PM2.5 [µg/m3]</th>
-                    <th>PM10 [µg/m3]</th>
-                </tr>
-                <tr>
-                    <td id="airFlow">0</td>
-                    <td id="pm25">0</td>
-                    <td id="pm10">0</td>
-                </tr>
-            </table>
-            <table>
-                <tr>
-                    <th>Agua</th>
-                </tr>
-                <tr>
-                    <th>Flujo [L/min]</th>
-                    <th>TDS [ppm]</th>
-                </tr>
-                <tr>
-                    <td id="waterFlow">0</td>
-                    <td id="tds">0</td>
-                </tr>
-            </table>
+                <div class="table-label">
+                    <label for="water-table">Agua</label>
+                </div>
+                <table class="data-table" name="water-table">
+                    <tr>
+                        <th>Flujo [L/min]</th>
+                        <th>TDS [ppm]</th>
+                    </tr>
+                    <tr>
+                        <td id="waterFlow">0</td>
+                        <td id="tds">0</td>
+                    </tr>
+                </table>
+            </div>
         </div>
     </body>
+    <style>
+        nav {
+            text-align: center;
+            font-size: 24px;
+            font-weight: 600;
+        }
+
+        body {
+            font-family: 'Josefin Sans', sans-serif;
+            background-color: #D6EDF2;
+            display: flex;
+            justify-content: center;
+            color: #03363D;
+        }
+
+        hr {
+            margin: 20px 40px;
+        }
+        
+        .title {
+            margin: 0 0 20px 0;
+            font-weight: 400;
+            text-decoration: underline;
+        }
+
+        .card {
+            background-color: #F8F9FB;
+            padding: 30px;
+            border-radius: 20px;
+            box-shadow: 6px 6px 20px 6px rgba(0, 0, 0, 0.1);
+            width: 600px;
+        }
+
+        .data-table {
+            width: 100%;
+            text-align: center;
+            border-collapse: collapse;
+        }
+
+        .data-table th {
+            background-color: #174D4D;
+            color: white;
+            font-weight: 300;
+            padding: 6px 0;
+        }
+
+        .data-table td {
+            background-color: #D6EDF2;
+            font-weight: 300 ;
+            padding: 5px 0;
+        }
+
+        .table-label {
+            width: 100%;
+            background-color: #174D4D;
+            color: white;
+            text-align: center;
+            padding: 5px 0;
+        }
+
+        .input {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+        
+        .input input {
+            width: 360px;
+            height: 40px;
+            background-color: white;
+            border-radius:  8px;
+            border: 1px solid #03363D;
+            padding: 10px;
+            font-family: 'Josefin Sans', sans-serif;
+            font-size: 16px;
+            font-weight: 300;
+        }
+
+        .slider {
+            -webkit-appearance: none;
+            width: 100%;
+            height: 10px;
+            border-radius: 5px;
+            background: #E7E7E7;
+            outline: none;
+            /* opacity: 0.7; */
+            -webkit-transition: .2s;
+            transition: opacity .2s;
+            margin: 20px 0 20px 0;
+        }
+
+        .slider::-webkit-slider-thumb {
+            -webkit-appearance: none;
+            appearance: none;
+            width: 25px;
+            height: 25px;
+            border-radius: 50%; 
+            background: #174D4D;
+            cursor: pointer;
+        }
+
+    </style>
     <script>
         var airInputElement = document.getElementById("input_air")
         airInputElement.addEventListener("input", (e) => {
@@ -94,7 +210,7 @@
                 body: JSON.stringify(data)
             }
 
-            fetch('http://192.168.1.103:5000/api/control', config)
+            fetch('http://localhost:5000/api/control', config)
                 .then(response => response.json())
                 .then(data => {
                     // console.log(data);
@@ -115,7 +231,7 @@
                 body: JSON.stringify(data)
             }
 
-            fetch('http://192.168.1.103:5000/api/control', config)
+            fetch('http://localhost:5000/api/control', config)
                 .then(response => response.json())
                 .then(data => {
                     // console.log(data);
@@ -124,7 +240,7 @@
         }
 
         function fetchData() {
-            fetch('http://192.168.1.103:5000/api/data')
+            fetch('http://localhost:5000/api/data')
                 .then(response => response.json())
                 .then(data => {
                     // console.log(data)
